added code to display text on screen

--- a/public_html/new_story_page.html
+++ b/public_html/new_story_page.html
@@ -6,26 +6,50 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta content="text/html; charset=UTF-8" http-equiv="Content-Type">
     <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/css/bootstrap-combined.min.css" rel="stylesheet">
-    <script src="http://jquery.js.googlecode.com/files/jquery.min.js"></script>
+    <script src="http://jqueryjs.googlecode.com/files/jquery-1.3.2.js"></script>
     <script src="//netdna.boostrapcdn.com/twitter-boostrap/2.3/js/bootstrap.min.js"></script>
+    <script type="text/javascript">
+        var storyNum = 2;
+        var xmlDoc;
+        /*var temp = {
+              reqType: "getHighestStoryNum"
+        }
+        $.post('/submitNode', temp, function(response){
+            $('xmlDoc').html(response);
+            storyNum = xmlDoc;
+            alert(String(storyNum));
+            }, 'json');*/
+        function submitStory(){
+            var recData;
+            var data = {
+                reqType: "submitNode",
+                storyNum: storyNum,
+                text: document.getElementsByName('storybox')[0].value,
+                initialID: 1
+            }
+            $.post('/submitNode?', data, function(response){
+                    $('recData').html(response);
+                    alert(recData);
+                    }, 'json');
+        }
+    </script>
   </head>
   
   <body>
     <div class="container">
       <h1>New story!</h1>
-      <form>
+      
         <label>Story name:</label>
         <input type="text" class="input-medium">
         <label>Type in your story!</label>
-        <textarea style="margin: 0px 0px 10px; width: 1234px; height: 417px;"></textarea>
+        <textarea name="storybox" style="margin: 0px 0px 10px; width: 1234px; height: 417px;"></textarea>
         <div class="well">Once you're done, hit this button, and your story will be created!
           <div
           class="form-actions">
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="submit" class="btn btn-primary" onclick="submitStory()">Submit</button>
             <input type="reset" class="btn" value="Reset"> 
         </div>
     </div>
-    </form>
     </div>
   </body>
 
