--- a/public_html/view_story.html
+++ b/public_html/view_story.html
@@ -6,10 +6,40 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta content="text/html; charset=UTF-8" http-equiv="Content-Type">
     <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/css/bootstrap-combined.min.css" rel="stylesheet">
+    <style>
+        rect {
+		fill: none;
+		pointer-events: all,
+	}
+	.node {
+		fill: #90ee90;
+	}
+	
+	.cursor{
+		fill: none;
+		stroke: black;
+		pointer-events: none;
+	}
+	
+	.link {
+		stroke: #999;
+	}
+    </style>
     <script src="http://code.jquery.com/jquery-1.9.1.js"></script>
     <script src="//netdna.boostrapcdn.com/twitter-boostrap/2.3/js/bootstrap.min.js"></script>
     <script type="text/javascript">
-        $(document).ready(function(){
+            </script>
+  </head>
+  
+  <body>
+      <div id="storydiv"> 
+          <span id="storyspan">
+            <h1>Now Viewing story!</h1>
+                <p></p>
+            </span>
+        </div>
+       <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
+       <script>
                 var inputdata = {
                     reqType: "getStory",
                     storyNum: 2
@@ -23,23 +53,97 @@
                         });
                     
                     outputdata.done(function( data ){
-                        var content = $( data ).find( '#content' );
+                        //alert(jQuery.parseJSON(data));
+                        stuff = jQuery.parseJSON( data );
+                        //if (stuff.name == inputdata.storyNum) alert("woo!");
+                        //var content = $( data ).find( '#content' );
                         //`:w
                         //alert(data);
-                        $( "#storydiv" ).text( data );
+                        //$( "#storydiv" ).text( data );
+                        return stuff;
                         });
-                    //$("#storydiv #storyspan").text(text);
-                });
-    </script>
-  </head>
-  
-  <body>
-      <div id="storydiv"> 
-          <span id="storyspan">
-            <h1>Now Viewing story!</h1>
-                <p></p>
-            </span>
-    </div>
+                    //$("#storydiv #storyspan").text(text);  
+
+var width = 960,
+	height = 500;
+	
+var fill = d3.scale.category20();
+var force = d3.layout.force()
+	.size([width, height])
+	.nodes([{}])
+	.linkDistance(30)
+	.charge(-60)
+	.on("tick", tick);
+	
+var svg = d3.select("body").append("svg")
+	.attr("width", width)
+	.attr("height", height)
+	.on("mousemove", mousemove)
+	.on("mousedown", mousedown);
+	
+svg.append("rect")
+	.attr("width", width)
+	.attr("height", height);
+	
+var nodes = force.nodes(),
+	links = force.links(),
+	node = svg.selectAll(".node"),
+	link = svg.selectAll(".link");
+
+var cursor = svg.append("circle")
+	.attr("r", 15)
+	.attr("transform", "translate(-100, -100)")
+	.attr("class", "cursor");
+    
+for (var i = 0; i < outputdata.contents.length; i++){
+    for (var j = 0; j < outputdata.contetnts[i].children.length; j++){
+        links.push({source: outputdata.contents[i], target: outputdata.contents[outputdata.contents[i].children[j]]});
+    }
+}
+
+restart();
+
+function mousemove() {
+	cursor.attr("transform", "translate("+d3.mouse(this) + ")");
+}
+
+function mousedown() {
+	var point = d3.mouse(this),
+		node = {x: point[0], y: point[1]},
+		n = nodes.push(node);
+	
+	nodes.forEach(function(target) {
+		var x = target.x - node.x,
+			y = target.y - node.y;
+		if (Math.sqrt(x*x + y*y) < 30) {
+			links.push({source: node, target: target});
+		}
+	});
+	restart();
+}
+function tick(){
+	link.attr("x1", function(d) { return d.source.x;})
+		.attr("y1", function(d) { return d.source.y;})
+		.attr("x2", function(d) { return d.target.x;})
+		.attr("y2", function(d) { return d.target.y;});
+	
+	node.attr("cx", function(d) { return d.x; })
+		.attr("cy", function(d) { return d.y; });
+}
+
+function restart() {
+	link = link.data(links);
+	link.enter().insert("line", ".node")
+		.attr("class", "link");
+	node = node.data(nodes);
+	node.enter().insert("circle", ".cursor")
+		.attr("class", "node")
+		.attr("r", 10)
+		.call(force.drag);
+	force.start();	
+}
+
+</script> 
   </body>
 
 </html>
