added mouseover functionality, and added a page containing all of the stories.  Also added the functionality to see all the children of a node.  Need to fix it so that it actually goes to the node you clicked on instead of the last one made

--- a/public_html/home_page.html
+++ b/public_html/home_page.html
@@ -5,10 +5,17 @@
     <title>home page</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta content="text/html; charset=UTF-8" http-equiv="Content-Type">
-    <link rel="stylesheet" href="css/bootstrap.css">
-    <link rel="stylesheet" href="css/bootstrap-responsive.css">
-    <script src="js/jquery.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
+
+
+     <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/css/bootstrap-combined.min.css" rel="stylesheet">
+
+    <script src="http://code.jquery.com/jquery-1.9.1.js"></script>
+
+
+    <script src="//netdna.boostrapcdn.com/twitter-boostrap/2.3/js/bootstrap.min.js"></script>
+
+
+
   </head>
   
   <body>
@@ -65,7 +72,7 @@
             <h1>Crowdsourcing Storytelling</h1>
             <p>Where anyone's stories can be told!</p>
             <p>
-              <a class="btn btn-large btn-primary" href="#">Start a Story now!</a> 
+              <a class="btn btn-large btn-primary" href="http://acm.eecs.northwestern.edu:8083/new_story">Start a Story now!</a> 
             </p>
           </div>
           <div class="row-fluid">
@@ -73,7 +80,7 @@
               <h2>Heading</h2>
               <p>A paragraph of details about the heading and its related content so that
                 you can have an example of how this should work.</p>
-              <a class="btn" href="#"><span class="btn-label">View Details</span></a> 
+              <a class="btn" href="http://acm.eecs.northwestern.edu:8083/storylist"><span class="btn-label">Play a Story!</span></a> 
             </div>
             <div class="span4">
               <h2>Heading</h2>
