--- a/public_html/new_story_page.html
+++ b/public_html/new_story_page.html
@@ -6,11 +6,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta content="text/html; charset=UTF-8" http-equiv="Content-Type">
     <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/css/bootstrap-combined.min.css" rel="stylesheet">
-    <script src="http://jqueryjs.googlecode.com/files/jquery-1.3.2.js"></script>
+
+    <script src="http://code.jquery.com/jquery-1.9.1.js"></script>
+
+
     <script src="//netdna.boostrapcdn.com/twitter-boostrap/2.3/js/bootstrap.min.js"></script>
     <script type="text/javascript">
-        var storyNum = 2;
+        var storyNum;
         var xmlDoc;
+        var initPost = {
+            reqType: "getLargestStory"
+        }
+        var outputdata = $.ajax({
+                        type: "POST",
+                        url: '/submitNode', 
+                        data: initPost,
+                        async: false
+                        });
+        outputdata.done(function(response){
+                storyNum = parseInt(response) + 1;
+                });
+
+//        alert(storyNum);
         /*var temp = {
               reqType: "getHighestStoryNum"
         }
@@ -31,6 +48,8 @@
                     $('recData').html(response);
                     alert(recData);
                     }, 'json');
+            alert("Story submitted!");
+            window.location = "http://acm.eecs.northwestern.edu:8083/home";
         }
     </script>
   </head>
