--- a/public_html/view_story.html
+++ b/public_html/view_story.html
@@ -67,9 +67,22 @@
         </div>
        <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
        <script>
+           var storynumReq = {
+            reqType: "getStoryNum"
+            }
+            var respData = $.ajax({
+                type: "POST",
+                url: '/submitNode',
+                data: storynumReq,
+                async: false
+            });
+            var storyNum;
+            respData.done( function(response){
+                storyNum = parseInt(response);
+            });
                 var inputdata = {
                     reqType: "getStory",
-                    storyNum: 2
+                    storyNum: storyNum
                     }
                     var text;
                     var stuff;
@@ -93,7 +106,8 @@
                         });
                     //$("#storydiv #storyspan").text(text);  
 var width = 960,
-	height = 500;
+    height = 500;
+var clickednode;
 	
 var fill = d3.scale.category20();
 var force = d3.layout.force()
@@ -169,8 +183,12 @@ function restart() {
     node.enter().insert("circle", ".cursor")
 		.attr("class", "node")
         .attr("r", 10)
-        .on("click", function(d,i){$(".overlayOuter").fadeIn(300); })
-        .append("text")
+        .on("click", function(d,i){
+            $(".overlayOuter").fadeIn(300); 
+            clickednode = d;
+            document.getElementById("nodetext").innerHTML = clickednode["text"];
+            })
+        .append("svg:title")
         .text(function(d) { return d.text })
         .call(force.drag);
 
@@ -185,7 +203,7 @@ function submitNewNode(){
                 reqType: "submitNode",
                 storyNum: storyNum,
                 text: document.getElementsByName('storybox')[0].value,
-                initialID: 2
+                initialID: clickednode["id"]
             }
             $.post('/submitNode?', data, function(response){
                     $('recData').html(response);
@@ -198,7 +216,7 @@ function submitNewNode(){
 function updateNodeList(){
     var newinputdata = {
         reqType: "getStory",
-        storyNum: 2
+        storyNum: storyNum
     }
     var newStuff;
     var newoutputdata = $.ajax({
@@ -220,7 +238,7 @@ function updateNodeList(){
         }
     }
     for (var thing in newStuff.contents){
-    var noderz = {x: 250, y: 25+2*thing, text: stuff.contents[thing].text, id: thing},
+    var noderz = {x: 250, y: 25+2*thing, text: newStuff.contents[thing].text, id: thing},
 	    nx = nodes.push(nodez);
     }
     nodes.forEach(function(target1) {
@@ -236,14 +254,14 @@ function updateNodeList(){
 
 }
 
-function close(){
+function poof(){
     $(".overlayOuter").hide("slow");
-    $('.overlayOuter').css( 'display', 'none' );
+//    $('.overlayOuter').css( 'display', 'none' );
 }
 //var content = stuff.contents.sort(function(a, b) {return a.textID - b.textID});
 var text = "";
 for (var item in stuff.contents){
-    text = stuff.contents[item].text + text;
+    text += stuff.contents[item].text;
 }
 $("#storydiv #storyspan").text(text);
                         //`:w
@@ -255,9 +273,10 @@ $("#storydiv #storyspan").text(text);
 <div class="overlayOuter"> 
     <div class="overlayInner">
         <!-- external content to be loaded here -->
+         <label id="nodetext"></label>
          <textarea name="storybox" style="margin: 0px 0px 10px; width: 1234px; height: 417px;"></textarea>
          <button type="submit" class="btn btn-primary" onclick="submitNewNode()">Submit</button>
-         <div id="close" class="close" onclick="close(this);">Close</div>
+         <div id="close" class="close" onclick="poof();">Close</div>
      </div>
   </div>
 </body>
