added home page functionality, an About Us page, and customized some of the text on the home page

--- a/public_html/home_page.html
+++ b/public_html/home_page.html
@@ -29,10 +29,10 @@
                 <a href="#">Home</a> 
               </li>
               <li>
-                <a href="#">About</a> 
+                <a href="http://acm.eecs.northwestern.edu:8083/about">About</a> 
               </li>
               <li>
-                <a href="#">List of Stories</a> 
+                <a href="http://acm.eecs.northwestern.edu:8083/storylist">List of Stories</a> 
               </li>
             </ul>
           </div>
@@ -45,15 +45,15 @@
         <div class="span3">
           <ul class="nav  nav-pills nav-stacked">
             <li class="active">
-              <a href="#">Subnavigation One</a> 
+              <a href="#">This does nothing</a> 
             </li>
             <li>
-              <a href="#">Subnavigation Two</a> 
+              <a href="#">This doesn't do anything either</a> 
             </li>
           </ul>
           <div class="well">
             <p>
-              <b>Tip:</b> You can add additional components to your layout easily.</p>
+              <b>Look at our awesomely fancy layout!</b> Who doesn't love fancy layouts?</p>
           </div>
         </div>
         <div class="span9">
@@ -77,22 +77,19 @@
           </div>
           <div class="row-fluid">
             <div class="span4">
-              <h2>Heading</h2>
-              <p>A paragraph of details about the heading and its related content so that
-                you can have an example of how this should work.</p>
+              <h2>Play</h2>
+              <p>Want to go through someone else's work?  Awesome!  Click the button below to get started!</p>
               <a class="btn" href="http://acm.eecs.northwestern.edu:8083/storylist"><span class="btn-label">Play a Story!</span></a> 
             </div>
             <div class="span4">
-              <h2>Heading</h2>
-              <p>A paragraph of details about the heading and its related content so that
-                you can have an example of how this should work.</p>
-              <a class="btn" href="#"><span class="btn-label">View Details</span></a> 
+              <h2>Create</h2>
+              <p>Make your own story to share with everyone!  Or, just click the big button up top.  What are you even doing looking here?</p>
+              <a class="btn" href="http://acm.eecs.northwestern.edu:8083/new_story"><span class="btn-label">Make a Story!</span></a> 
             </div>
             <div class="span4">
-              <h2>Heading</h2>
-              <p>A paragraph of details about the heading and its related content so that
-                you can have an example of how this should work.</p>
-              <a class="btn" href="#"><span class="btn-label">View Details</span></a> 
+              <h2>This is useless now</h2>
+              <p>Honestly, there isn't enough stuff yet for this to actually do anything.  Maybe it will have something later.  But not now.</p>
+              <a class="btn" href="#"><span class="btn-label">Click me, I dare you.</span></a> 
             </div>
           </div>
         </div>
