--- a/public_html/new_story_page.html
+++ b/public_html/new_story_page.html
@@ -55,6 +55,28 @@
   </head>
   
   <body>
+    <div class="navbar">
+      <div class="navbar-inner">
+        <div class="container">
+          <a class="brand" href="#">StoryTime</a>
+          <div class="navbar-content">
+            <ul class="nav">
+              <li class="active">
+                <a href="http://acm.eecs.northwestern.edu:8083/home">Home</a> 
+              </li>
+              <li>
+                <a href="#">About</a> 
+              </li>
+              <li>
+                <a href="http://acm.eecs.northwestern.edu:8083/storylist">List of Stories</a> 
+              </li>
+            </ul>
+          </div>
+          <ul class="nav nav-tabs"></ul>
+        </div>
+      </div>
+    </div>
+
     <div class="container">
       <h1>New story!</h1>
       
